[package]
name = "tenki-core"
version = "0.2.0"
authors = ["algon-320 <algon.0320@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
selectors = "0.22.0"
itertools = "0.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
strum = "0.24"
strum_macros = "0.24"
reqwest = "0.11"
scraper = "0.13"
regex = "1.5"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
