[package]
name = "tenki-core"
version = "0.1.0"
authors = ["algon-320 <algon.0320@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
selectors = "0.22.0"
itertools = "0.9.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
strum = "0.19"
strum_macros = "0.19"
reqwest = { version = "0.10", features = ["blocking"] }
scraper = "0.12"
regex = "1"
