[package]
name = "tenki-rs"
version = "0.1.0"
authors = ["algon-320 <algon.0320@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.1.8"
tenki-core = { path = "../core" }
box-drawing-table = { git = "https://github.com/algon-320/box-drawing-table", branch = "main" }
