[package]
name = "tenki"
version = "0.2.0"
authors = ["algon-320 <algon.0320@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.24", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
box-drawing-table = "0.1.0"
tenki-core = { path = "../core" }
